2004-10-09  Pascal Obry  <pascal@obry.org>

	* makefile:
	(AWSRES): Fix PATH based on BDIR.
	(WSDL2AWS): Idem.

2004-10-08  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* makefile:
	(GCC_342_FIX): Define for workaround project linking bug.
	Use BDIR macros instead of PRJ_BUILD comparision.

2004-10-07  Pascal Obry  <pascal@obry.org>

	* demos_ssl.gpr:
	Remove ssl project.

	* demos.gpr:
	Remove nossl project.

2004-10-06  Pascal Obry  <pascal@obry.org>

	* demos.gpr:
	(Source_Files): Update to include all sources files. This is
	 required to build with GNAT 5.03.

2004-10-06  Pascal Obry  <pascal@obry.org>

	* demos_shared.gpr:
	(Socket_Type): Move this to the AWS's shared project.

	* demos_ssl.gpr:
	Use Shared.Socket instead of Demos_Shared.Socket.

2004-10-02  Pascal Obry  <pascal@obry.org>

	* demos.gpr:
	Move all XML/Ada related source into the proper section.
	Fix build failure. Continued work to support GNAT Project files.

	* demos_ssl.gpr:
	Minor reformatting.

	* makefile:
	(build): Capitalize SOCKET.
	Remove some unused declarations.

2004-10-02  Pascal Obry  <pascal@obry.org>

	* makefile:
	(BUILD_OPT): Removed, not used now.
	(test_ldap): Idem.
	(build): Add rule to build the SSL based demos.

	* demos.gpr:
	Rewrite a good part, this project file is now only used for non
	 SSL based demos. Part of the code as been moved to demos_shared
	 to be shared with demos_ssl project which handles SSL basesd
	 demos.

	* demos_shared.gpr, demos_ssl.gpr:
	Initial revision.

2004-09-30  Pascal Obry  <pascal@obry.org>

	* demos.gpr:
	Add test_jabber.adb demo for build with XML/Ada support.

2004-09-29  Pascal Obry  <pascal@obry.org>

	* makefile:
	Extensive changes to support build based on GNAT Project files.
	The makefile based build has been removed.

	* demos.gpr:
	Add with for project "win32".
	Minor reformatting.

2004-09-29  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* agent.adb:
	Allow back output the headers and the message body with an HTTPS URL.