@@ -1,3 +1,8 @@
+2004-10-11  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* makefile:
+	Use BDIR macros for setup/cleanup build directories.
+
 2004-10-09  Pascal Obry  <pascal@obry.org>
 
 	* makefile:
